# anki-hanzi

./: README.md  poetry_scripts.py  pyproject.toml
anki_hanzi/: __init__.py  anki_client.py  google_cloud.py  language.py  main.py  processing.py  text_to_speech.py  translation.py
