[tool.poetry]
name = "anki-hanzi"
version = "0.1.0"
description = ""
authors = ["David Sauerwein <david@sauerwein.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
anki-hanzi = "anki_hanzi.main:main"
lint = "poetry_scripts:lint"
format = "poetry_scripts:format"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.0"
isort = "^5.13.2"
mypy = "^1.9.0"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
