[tool.poetry]
name = "anki-hanzi"
version = "0.1.0"
description = ""
authors = ["David Sauerwein <david@sauerwein.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
anki = "^24.6.3"
dragonmapper = "^0.2.7"
google-cloud-translate = "^3.18.0"
google-cloud-texttospeech = "^2.23.0"
tenacity = "^9.0.0"
beautifulsoup4 = "^4.14.2"

[tool.poetry.scripts]
anki-hanzi = "anki_hanzi.main:main"
lint = "poetry_scripts:lint"
format = "poetry_scripts:format"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.0"
isort = "^5.13.2"
mypy = "^1.9.0"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
